--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -5,4 +5,4 @@
 @import "editor/style-previews";
 
 // Style various inspector region and block toolbar controls
-@import "editor/is-background-transient";
+@import "editor/is-transient";
