Add Typography options on row and column blocks + allowedBlocks cleanup

--- a/src/extensions/typography/styles/editor.scss
+++ b/src/extensions/typography/styles/editor.scss
@@ -21,7 +21,8 @@
 	}
 
 	.editor-rich-text {
-		.wp-block-cover-text {
+		.wp-block-cover-text,
+		.wp-block-paragraph {
 			font-size: inherit;
 		}
 	}
