Add block list edit custom letterspacing data attribute

--- a/src/extensions/typography/styles/editor.scss
+++ b/src/extensions/typography/styles/editor.scss
@@ -155,6 +155,13 @@
 	}
 }
 
+.editor-block-list__block[data-custom-letterspacing="1"] {
+	.block-library-button__inline-link,
+	.editor-block-list__breadcrumb{
+		letter-spacing: normal;
+	}
+}
+
 body {
 	.editor-block-list__block[data-custom-lineheight="1"] {
 		.wp-block-heading {
