--- a/src/extensions/typography/styles/editor.scss
+++ b/src/extensions/typography/styles/editor.scss
@@ -193,6 +193,7 @@ body {
 				line-height: inherit !important;
 			}
 
+			.editor-rich-text__tinymce, 
 			.wp-block-cover-text {
 				line-height: inherit;
 			}
