--- a/src/blocks/social/styles/style.scss
+++ b/src/blocks/social/styles/style.scss
@@ -1,8 +1,8 @@
 // Supported icons.
-$icons: ( twitter, #55acee ), ( facebook, #3b5999 ), ( pinterest, #bd081c ), ( linkedin, #0077b5 ), ( tumblr, #34465d ), ( reddit, #ff5700 ), ( email, #2880e5 ), ( google, #dd4b39);
+$icons: (twitter, #55acee), (facebook, #3b5999), (pinterest, #bd081c), (linkedin, #0077b5), (tumblr, #34465d), (reddit, #ff5700), (email, #2880e5),
+	(google, #dd4b39);
 
 .wp-block-coblocks-social {
-
 	// Fallback color to match core button block.
 	.wp-block-button__link:not(.has-background) {
 		background-color: #31373c;
@@ -79,8 +79,8 @@ $icons: ( twitter, #55acee ), ( facebook, #3b5999 ), ( pinterest, #bd081c ), ( l
 	&__button--tumblr &__icon + &__text {
 		margin-left: 4px;
 	}
-	@each $icon, $color in $icons {
 
+	@each $icon, $color in $icons {
 		&__button--#{$icon} &__icon {
 			mask-image: url(images/social/#{$icon}.svg);
 		}
@@ -93,16 +93,13 @@ $icons: ( twitter, #55acee ), ( facebook, #3b5999 ), ( pinterest, #bd081c ), ( l
 
 	// Social Colors.
 	&.has-colors {
-
 		@each $icon, $color in $icons {
-
 			.wp-block-coblocks-social__button--#{$icon} {
 				background-color: $color !important;
 			}
 		}
 
 		@each $icon, $color in $icons {
-
 			&.is-style-mask .wp-block-coblocks-social__button--#{$icon} {
 				color: $color !important;
 			}
@@ -111,7 +108,6 @@ $icons: ( twitter, #55acee ), ( facebook, #3b5999 ), ( pinterest, #bd081c ), ( l
 
 	// Default style.
 	&:not(.is-style-text):not(.is-style-icon-and-text) {
-
 		.wp-block-coblocks-social__button {
 			padding: 11px 24px;
 
@@ -134,7 +130,6 @@ $icons: ( twitter, #55acee ), ( facebook, #3b5999 ), ( pinterest, #bd081c ), ( l
 
 	// Text only style.
 	&.is-style-text {
-
 		.wp-block-coblocks-social__icon {
 			display: none;
 		}
@@ -146,7 +141,6 @@ $icons: ( twitter, #55acee ), ( facebook, #3b5999 ), ( pinterest, #bd081c ), ( l
 
 	// Mask style.
 	&.is-style-mask {
-
 		li,
 		&.has-button-size-sml li {
 			margin: 0 7px !important;
@@ -165,12 +159,10 @@ $icons: ( twitter, #55acee ), ( facebook, #3b5999 ), ( pinterest, #bd081c ), ( l
 		&:not(.has-colors) .wp-block-button__link:not(.has-text-color) {
 			color: #31373c;
 		}
-
 	}
 
 	// Sizes.
 	&.has-button-size-sml {
-
 		li {
 			margin: 2px 4px 2px 0 !important;
 		}
@@ -192,7 +184,6 @@ $icons: ( twitter, #55acee ), ( facebook, #3b5999 ), ( pinterest, #bd081c ), ( l
 	}
 
 	&.has-button-size-lrg {
-
 		// Icon only style.
 		&:not(.is-style-text):not(.is-style-icon-and-text) .wp-block-coblocks-social__button {
 			padding: 14px 32px;
@@ -211,7 +202,6 @@ $icons: ( twitter, #55acee ), ( facebook, #3b5999 ), ( pinterest, #bd081c ), ( l
 }
 
 @keyframes pulse {
-
 	0% {
 		transform: scale(1);
 	}
