--- a/src/common.scss
+++ b/src/common.scss
@@ -1,7 +1,7 @@
 // This SCSS file loads per every instance of each block.
 
 // Fonts & basics
-$default-font: -apple-system, blinkmacsystemfont,"Segoe UI", roboto, oxygen-sans, ubuntu, cantarell,"Helvetica Neue", sans-serif;
+$default-font: -apple-system, blinkmacsystemfont, "Segoe UI", roboto, oxygen-sans, ubuntu, cantarell, "Helvetica Neue", sans-serif;
 
 // CoBlocks branding color.
 $coblocks: #536dff;
@@ -10,7 +10,7 @@ $coblocks: #536dff;
 $black: rgb(41, 41, 41);
 $black-000: #000;
 $gray: #555d66;
-$red: #d94f4f;
+$red: #c92c2c;
 $lightred: #f9e2e2;
 $lightgreen: #eff9f1;
 $darkgreen: #337f46;
