Add support for em units in the Advanced Dimensions Controls

--- a/src/components/dimensions-control/styles/editor.scss
+++ b/src/components/dimensions-control/styles/editor.scss
@@ -130,7 +130,8 @@
 		top: -2px;
 	}
 
-	&__units--Pixel {
+	&__units--Pixel,
+	&__units--Em {
 		border-radius: 3px !important;
 		margin-right: 2px;
 	}
