--- a/src/blocks/features/styles/style.scss
+++ b/src/blocks/features/styles/style.scss
@@ -1,10 +1,6 @@
 .wp-block-coblocks-features {
-	position: relative;
-
-	@media (min-width: 600px) {
-		align-items: flex-start;
-		display: flex;
-		flex-wrap: wrap;
+	&, &__inner{
+		position: relative;
 	}
 
 	&.alignfull,
@@ -55,73 +51,81 @@
 		}
 	}
 
-	&.has-1-columns {
-
-		.wp-block-coblocks-feature {
-			margin: 0;
-		}
-	}
-
-	&.has-2-columns {
-
-		.wp-block-coblocks-feature {
-
-			&:nth-of-type(1) {
-				margin-left: 0;
-			}
-
-			&:nth-of-type(2) {
-				margin-right: 0;
-			}
-		}
-	}
-
-	&.has-3-columns {
-		@media (min-width: 900px) {
-			flex-wrap: nowrap;
+	&__inner{
+		@media (min-width: 600px) {
+			align-items: flex-start;
+			display: flex;
+			flex-wrap: wrap;
 		}
 
-		.wp-block-coblocks-feature {
+		&.has-1-columns {
 
-			&:nth-of-type(1) {
-				margin-left: 0;
+			.wp-block-coblocks-feature {
+				margin: 0;
 			}
+		}
 
-			&:nth-of-type(2) {
-				margin-right: 0;
+		&.has-2-columns {
 
-				@media (min-width: 900px) {
-					margin-right: 7px;
-					margin-left: 7px;
-				}
-			}
-
-			&:nth-of-type(3) {
-				margin-right: 0;
-			}
-
-			@media (max-width: 899px) {
+			.wp-block-coblocks-feature {
 
 				&:nth-of-type(1) {
-					width: 100%;
-				}
-
-				&:nth-of-type(2),
-				&:nth-of-type(3) {
-					margin-bottom: 30px;
-				}
-
-				&:nth-of-type(3) {
 					margin-left: 0;
 				}
+
+				&:nth-of-type(2) {
+					margin-right: 0;
+				}
+			}
+		}
+
+		&.has-3-columns {
+			@media (min-width: 900px) {
+				flex-wrap: nowrap;
 			}
 
-			@media (max-width: 599px) {
+			.wp-block-coblocks-feature {
 
-				&:nth-of-type(1),
-				&:nth-of-type(2),
+				&:nth-of-type(1) {
+					margin-left: 0;
+				}
+
+				&:nth-of-type(2) {
+					margin-right: 0;
+
+					@media (min-width: 900px) {
+						margin-right: 7px;
+						margin-left: 7px;
+					}
+				}
+
 				&:nth-of-type(3) {
-					margin: 0 0 30px 0;
+					margin-right: 0;
+				}
+
+				@media (max-width: 899px) {
+
+					&:nth-of-type(1) {
+						width: 100%;
+					}
+
+					&:nth-of-type(2),
+					&:nth-of-type(3) {
+						margin-bottom: 30px;
+					}
+
+					&:nth-of-type(3) {
+						margin-left: 0;
+					}
+				}
+
+				@media (max-width: 599px) {
+
+					&:nth-of-type(1),
+					&:nth-of-type(2),
+					&:nth-of-type(3) {
+						margin: 0 0 30px 0;
+					}
 				}
 			}
 		}
