--- a/src/blocks/features/styles/editor.scss
+++ b/src/blocks/features/styles/editor.scss
@@ -15,6 +15,66 @@
 					}
 				}
 			}
+
+			&.has-small-gutter > .editor-inner-blocks > .editor-block-list__layout > [data-type="coblocks/feature"] {
+				@include break-small() {
+					&:nth-child(odd) {
+						margin-right: $gutter--small - 16px;
+					}
+
+					&:nth-child(even) {
+						margin-left: $gutter--small - 16px;
+					}
+
+					&:not(:first-child) {
+						margin-left: $gutter--small - 16px;
+					}
+
+					&:not(:last-child) {
+						margin-right: $gutter--small - 16px;
+					}
+				}
+			}
+
+			&.has-medium-gutter > .editor-inner-blocks > .editor-block-list__layout > [data-type="coblocks/feature"] {
+				@include break-small() {
+					&:nth-child(odd) {
+						margin-right: $gutter--medium - 16px;
+					}
+
+					&:nth-child(even) {
+						margin-left: $gutter--medium - 16px;
+					}
+
+					&:not(:first-child) {
+						margin-left: $gutter--medium - 16px;
+					}
+
+					&:not(:last-child) {
+						margin-right: $gutter--medium - 16px;
+					}
+				}
+			}
+
+			&.has-large-gutter > .editor-inner-blocks > .editor-block-list__layout > [data-type="coblocks/feature"] {
+				@include break-small() {
+					&:nth-child(odd) {
+						margin-right: $gutter--large - 16px;
+					}
+
+					&:nth-child(even) {
+						margin-left: $gutter--large - 16px;
+					}
+
+					&:not(:first-child) {
+						margin-left: $gutter--large - 16px;
+					}
+
+					&:not(:last-child) {
+						margin-right: $gutter--large - 16px;
+					}
+				}
+			}
 		}
 	}
 
