--- a/src/common.scss
+++ b/src/common.scss
@@ -42,3 +42,4 @@ $dark-gray-500: #555d66; // Use this most of the time for dark items.
 $gutter--small: 18px;
 $gutter--medium: 22px;
 $gutter--large: 33px;
+$gutter--huge: 60px;
