--- a/src/blocks/features/styles/style.scss
+++ b/src/blocks/features/styles/style.scss
@@ -22,11 +22,11 @@
 		word-break: break-word;
 		margin-bottom: 30px;
 
-		@media (min-width: 600px) {
-			margin-left: 15px;
-			margin-right: 15px;
-			margin-bottom: 0;
-		}
+		// @media (min-width: 600px) {
+		// 	margin-left: 15px;
+		// 	margin-right: 15px;
+		// 	margin-bottom: 0;
+		// }
 
 		h1,
 		h2,
@@ -125,6 +125,32 @@
 					&:nth-of-type(2),
 					&:nth-of-type(3) {
 						margin: 0 0 30px 0;
+					}
+				}
+			}
+		}
+
+		&.has-4-columns {
+
+			@media (min-width: 1100px) {
+				flex-wrap: nowrap;
+			}
+
+			.wp-block-coblocks-feature {
+
+				@media (min-width: 1100px) {
+					margin-bottom: 0;
+				}
+
+				@media (max-width: 1099px) {
+					flex: 50%;
+				}
+
+				@media (min-width: 600px) and (max-width: 1099px) {
+
+					&--3,
+					&--4 {
+						margin-bottom: 0;
 					}
 				}
 			}
