Add shadow utility class

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -10,6 +10,7 @@
 @import "style/padding";
 @import "style/margin";
 @import "style/gutter";
+@import "style/shadow";
 
 // Mobile classes
 @import "style/stacked";
