--- a/src/blocks/image-card/styles/style.scss
+++ b/src/blocks/image-card/styles/style.scss
@@ -1,8 +1,12 @@
 .wp-block-coblocks-image-card {
 	position: relative;
 
-	@media (min-width: 700px) {
-		display: flex;
+	&__inner{
+		position: relative;
+
+		@media (min-width: 700px) {
+			display: flex;
+		}
 	}
 
 	&__heading {
