One column row wide and full width frontend support

--- a/src/blocks/row/styles/style.scss
+++ b/src/blocks/row/styles/style.scss
@@ -5,6 +5,22 @@
 	}
 }
 
+.wp-block-coblocks-row[data-columns="1"] {
+	.wp-block-coblocks-column__inner{
+		> [class*="wp-block-"]{
+			max-width: calc(6 * (100vw / 12) - 28px);
+    		margin-left: auto;
+    		margin-right: auto;
+    		&.alignwide{
+    			max-width: calc(6 * (100vw / 8) - 28px);
+    		}
+    		&.alignfull{
+    			max-width: 100%;
+    		}
+		}
+	}
+}
+
 .wp-block-coblocks-column {
 	margin-bottom: $grid-size-large * 2;
 
