Remove width and use max-width instead

--- a/src/blocks/row/styles/editor.scss
+++ b/src/blocks/row/styles/editor.scss
@@ -25,7 +25,7 @@
 							max-width: calc( 6 * (100vw / 8) ) !important;
 						}
 						&[data-align="full"]{
-							width: 112.5%;
+							// width: 112.5%;
     						max-width: calc( 112.5% + 90px) !important;
 						}
 				}
