--- a/src/blocks/features/styles/editor.scss
+++ b/src/blocks/features/styles/editor.scss
@@ -7,7 +7,9 @@
 			> .editor-inner-blocks {
 
 				> .editor-block-list__layout {
-					display: flex;
+					@media (min-width: 600px) {
+						display: flex;
+					}
 
 					> .wp-block > .editor-block-list__block-edit {
 						margin-top: 0;
