--- a/src/blocks/accordion/styles/editor.scss
+++ b/src/blocks/accordion/styles/editor.scss
@@ -1,6 +1,5 @@
 .wp-block[data-type="coblocks/accordion"] {
-
-	.editor-block-list__layout .editor-block-list__block>.editor-block-list__block-edit:before {
+	.editor-block-list__layout .editor-block-list__block > .editor-block-list__block-edit::before {
 		outline: none;
 	}
 
@@ -18,14 +17,12 @@
 
 	&[data-align="wide"],
 	&[data-align="full"] {
-
 		.editor-block-list__block {
 			max-width: none;
 		}
 	}
 
 	&[data-align="full"] {
-
 		.wp-block-coblocks-accordion {
 			padding: 0 12px;
 		}
