--- a/src/blocks/accordion/accordion-item/styles/style.scss
+++ b/src/blocks/accordion/accordion-item/styles/style.scss
@@ -56,6 +56,10 @@
 		p:last-of-type {
 			margin-bottom: 0;
 		}
+
+		> .wp-block-coblocks-accordion {
+			margin-top: 0.95em;
+		}
 	}
 
 	&__text {
