--- a/src/blocks/features/styles/editor.scss
+++ b/src/blocks/features/styles/editor.scss
@@ -1,35 +1,33 @@
 .wp-block[data-type="coblocks/features"] {
-
 	.wp-block-coblocks-features {
 		width: 100%;
 
-		&__inner{
+		&__inner {
 			> .editor-inner-blocks {
-
 				> .editor-block-list__layout {
 					@media (min-width: 600px) {
 						display: flex;
 					}
 
 					> .wp-block > .editor-block-list__block-edit {
-						margin-top: 0;
 						margin-bottom: 0;
+						margin-top: 0;
 					}
 				}
 			}
 
-			//hide first mover
-			[data-type="coblocks/feature"]{
-				.wp-block:first-child{
-					.editor-block-mover{
+			// Hide first mover.
+			[data-type="coblocks/feature"] {
+				.wp-block:first-child {
+					.editor-block-mover {
 						display: none !important;
 					}
 				}
 			}
 
-			//single features fixes
-			&.has-1-columns{
-				.editor-inner-blocks{
+			// Fixes single feature full width issue.
+			&.has-1-columns {
+				.editor-inner-blocks {
 					width: 100%;
 				}
 			}
@@ -98,7 +96,6 @@
 
 	.wp-block[data-type="core/heading"],
 	.wp-block[data-type="core/paragraph"] {
-
 		.editor-block-list__insertion-point {
 			display: none;
 			position: relative;
@@ -107,7 +104,6 @@
 
 	&[data-align="wide"],
 	&[data-align="full"] {
-
 		.editor-block-list__block {
 			max-width: none;
 		}
@@ -119,7 +115,6 @@
 	}
 
 	.wp-block[data-type="coblocks/feature"] {
-
 		@media (min-width: 600px) {
 			display: flex;
 			flex-direction: column;
@@ -128,12 +123,8 @@
 			min-width: 0;
 
 			// Prevent long unbroken words from overflowing.
-			overflow-wrap: break-word; // New standard.
-			word-break: break-word; // For back-compat.
-		}
-
-		.editor-block-list__layout .editor-block-list__block > .editor-block-list__block-edit::before {
-			// outline: none;
+			overflow-wrap: break-word;
+			word-break: break-word;
 		}
 
 		.editor-default-block-appender {
@@ -143,8 +134,5 @@
 		.wp-block-image figcaption {
 			display: none;
 		}
-		// .wp-block-image .components-placeholder__instructions {
-		// 	display: none;
-		// }
 	}
 }
