Tweak label position for the feature block count control

--- a/src/styles/editor/_numerals-control.scss
+++ b/src/styles/editor/_numerals-control.scss
@@ -1,6 +1,10 @@
 .components-coblocks__toolbar-control--numerals {
 	display: inline-flex;
 
+	&-label {
+		margin-bottom: 17px;
+	}
+
 	.components-button[data-subscript]::after {
 		bottom: 0.68em;
 		font-size: 17px;
