Fix right style

--- a/src/blocks/image-card/styles/style.scss
+++ b/src/blocks/image-card/styles/style.scss
@@ -89,7 +89,7 @@
 		margin-top: 10px;
 	}
 
-	&.is-style-right {
+	&.is-style-right &__inner {
 		flex-direction: row-reverse;
 
 		.wp-block-coblocks-image-card__img-wrapper {
