--- a/src/blocks/image-card/styles/editor.scss
+++ b/src/blocks/image-card/styles/editor.scss
@@ -63,14 +63,14 @@
 		}
 		> .editor-inner-blocks{
 			> .editor-block-list__layout{
-				.wp-block:first-child{
-					.editor-block-list__block-edit{
-						margin-top: 0px;
-					}
-				}
-				.wp-block:last-child{
+				> .wp-block{
 					.editor-block-list__block-edit{
 						margin-bottom: 0px;
+					}
+					&:first-child{
+						.editor-block-list__block-edit{
+							margin-top: 0px;
+						}
 					}
 				}
 			}
