Hide first image card block insertion point

--- a/src/blocks/image-card/styles/editor.scss
+++ b/src/blocks/image-card/styles/editor.scss
@@ -71,6 +71,9 @@
 						.editor-block-list__block-edit{
 							margin-top: 0px;
 						}
+						.editor-block-list__insertion-point{
+							display: none;
+						}
 					}
 				}
 			}
